# directshow_camera

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CODESTYLE.md  LICENSE  README.md  build.bat  copy_dll.bat  vcpkg.json
deploy_example/: CMakeLists.txt  main.cpp
examples/: CMakeLists.txt  eg1_capture.cpp  eg1_capture.h  eg2_properties.cpp  eg2_properties.h  eg3_camera_looper.cpp  eg3_camera_looper.h  eg4_exposure_fusion.cpp  eg4_exposure_fusion.h  eg5_disconnect_process.cpp  eg5_disconnect_process.h  eg6_stub.cpp  example.cpp
src/: CMakeLists.txt  camera_device.cpp  camera_resolution.cpp  cv_mat_convertor.cpp  ds_camera.cpp  ds_camera_device.cpp  ds_camera_properties.cpp  ds_camera_property.cpp  ds_camera_stub.cpp  ds_camera_utils.cpp  ds_grabber_callback.cpp  ds_video_format.cpp  uvc_camera.cpp  uvc_camera_looper.cpp
src/directshow_camera/examples/: CMakeLists.txt  eg1_capture.cpp  eg6_stub.cpp  example.cpp
src/directshow_camera/examples/examples/: eg1_capture.cpp  eg1_capture.h  eg2_properties.cpp  eg2_properties.h  eg3_camera_thread.cpp  eg4_exposure_fusion.cpp  eg5_disconnect_process.cpp  eg5_disconnect_process.h  eg6_stub.cpp
src/directshow_camera/src/: CMakeLists.txt  abstract_ds_camera.cpp  abstract_ds_camera.h  camera_device.cpp  camera_device.h  cv_mat_convertor.cpp  ds_camera.cpp  ds_camera.h  ds_camera_device.cpp  ds_camera_device.h  ds_camera_properties.cpp  ds_camera_properties.h  ds_camera_property.cpp  ds_camera_property.h  ds_camera_stub.cpp  ds_camera_stub.h  ds_camera_stub_default.h  ds_camera_utils.cpp  ds_camera_utils.h  ds_grabber_callback.cpp  ds_grabber_callback.h  ds_libs_setting.h  ds_video_format.cpp  ds_video_format.h  uvc_camera.cpp  uvc_camera.h
src/directshow_camera/src/camera/: camera.cpp  camera.h  camera_device.cpp  camera_device.h  camera_thread.cpp  camera_thread.h  camera_utils.cpp  camera_utils.h
src/directshow_camera/src/camera/properties/: camera_property.cpp  camera_property.h  camera_property_backlight_compensation.cpp  camera_property_backlight_compensation.h  camera_property_brightness.cpp  camera_property_brightness.h  camera_property_color_enable.cpp  (+33 more)
src/directshow_camera/src/directshow_camera/: ds_header.h
src/directshow_camera/src/ds_camera/: ds_camera.h  ds_camera_properties.cpp  ds_camera_property.cpp  ds_camera_property.h  ds_camera_stub.cpp  ds_camera_stub.h  ds_camera_stub_default.h  ds_camera_utils.cpp  ds_grabber_callback.h  ds_guid.h  ds_video_format.h
src/directshow_camera/src/exceptions/: camera_not_opened_exception.cpp  camera_not_opened_exception.h  device_not_found_exception.cpp  device_not_found_exception.h  directshow_camera_exception.cpp  directshow_camera_exception.h  property_not_support_exception.cpp  property_not_support_exception.h  resolution_not_support_exception.cpp  resolution_not_support_exception.h
src/directshow_camera/src/frame/: frame.cpp  frame.h  frame_decoder.cpp  frame_decoder.h  frame_settings.cpp  frame_settings.h
src/directshow_camera/src/opencv_utils/: cv_mat_convertor.cpp  cv_mat_convertor.h
src/directshow_camera/src/utils/: gdi_plus_utils.cpp  gdi_plus_utils.h  math_utils.h  path_utils.cpp  path_utils.h  string_utils.cpp  string_utils.h  time_utils.h
src/directshow_camera/test/: CMakeLists.txt  ds_camera_stub_unittest.cpp
src/win_camera/examples/: CMakeLists.txt  eg1_capture.cpp  eg2_properties.cpp  eg3_camera_looper.cpp  eg3_camera_thread.cpp  eg3_camera_thread.h  eg4_exposure_fusion.cpp  eg5_disconnect_process.cpp  eg6_stub.cpp  eg6_stub.h  example.cpp  stdafx.h
src/win_camera/examples/examples/: eg1_capture.cpp  eg1_capture.h  eg2_properties.cpp  eg2_properties.h  eg3_camera_thread.cpp  eg3_camera_thread.h  eg4_exposure_fusion.cpp  eg4_exposure_fusion.h  eg5_disconnect_process.cpp  eg5_disconnect_process.h  eg6_stub.cpp  eg6_stub.h
src/win_camera/src/: CMakeLists.txt  camera_device.cpp  camera_device.h  stdafx.h  uvc_camera.cpp  uvc_camera.h  uvc_camera_looper.cpp  uvc_camera_looper.h  win_camera.cpp  win_camera.h  win_camera_device.cpp  win_camera_device.h  win_camera_looper.cpp  win_camera_looper.h
src/win_camera/src/directshow_camera/: abstract_ds_camera.cpp  abstract_ds_camera.h  ds_camera.cpp  ds_camera.h  ds_camera_device.cpp  ds_camera_device.h  ds_camera_properties.cpp  ds_camera_properties.h  ds_camera_property.cpp  ds_camera_property.h  ds_camera_stub.cpp  ds_camera_stub.h  ds_camera_stub_default.h  ds_camera_utils.cpp  ds_camera_utils.h  ds_grabber_callback.cpp  ds_grabber_callback.h  ds_guid.h  ds_header.h  ds_video_format.cpp  ds_video_format.h  ds_video_format_list.cpp  ds_video_format_list.h
src/win_camera/src/ds_camera/: abstract_ds_camera.cpp  abstract_ds_camera.h  ds_camera.cpp  ds_camera_device.cpp  ds_camera_device.h  ds_camera_properties.h  ds_camera_property.h  ds_camera_stub.cpp  ds_camera_utils.h  ds_grabber_callback.cpp  ds_video_format.cpp
src/win_camera/src/exceptions/: camera_not_opened_exception.cpp  camera_not_opened_exception.h  device_not_found_exception.cpp  device_not_found_exception.h  directshow_camera_exception.cpp  directshow_camera_exception.h  property_not_support_exception.cpp  property_not_support_exception.h  resolution_not_support_exception.cpp  resolution_not_support_exception.h
src/win_camera/src/frame/: frame.cpp  frame.h  frame_decoder.cpp  frame_decoder.h  frame_settings.cpp  frame_settings.h
src/win_camera/src/opencv_utils/: cv_mat_convertor.cpp  cv_mat_convertor.h  cv_mat_settings.cpp  cv_mat_settings.h
src/win_camera/src/utils/: gdi_plus_utils.cpp  gdi_plus_utils.h  math_utils.cpp  math_utils.h  path_utils.cpp  path_utils.h  string_utils.cpp  string_utils.h  time_utils.cpp  time_utils.h
src/win_camera/src/win_camera/: frame.cpp  frame.h  win_camera.cpp  win_camera.h  win_camera_device.cpp  win_camera_device.h  win_camera_looper.cpp  win_camera_looper.h  win_camera_thread.cpp  win_camera_thread.h  win_camera_utils.cpp  win_camera_utils.h
src/win_camera/test/: CMakeLists.txt  ds_camera_stub_unittest.cpp  stdafx.h
test/: CMakeLists.txt  ds_camera_stub_unittest.cpp
(+144 files in other folders)
